# handwrite-font-maker

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  render.yaml
deploy/render/: Dockerfile
sample-output/template-v1-synthetic/: TemplateV1Synthetic.sfd
scripts/: fontforge_build.py  fontforge_validate.py
src/handwrite_font_maker/: __init__.py  cli.py  diagnostics.py  extract.py  layout.py  markers.py  metadata.py  pipeline.py  rectify.py  schema.py  template.py
src/handwrite_font_maker/web/: api.py  contracts.py  job_store.py  server.py  supabase_store.py  worker.py  worker_loop.py
supabase/migrations/: 0001_jobs.sql
tests/: conftest.py  test_build_e2e.py  test_layout_schema.py  test_pipeline_diagnostics.py  test_template_detection.py  test_web_contracts.py  test_web_static_boundaries.py
web/: eslint.config.mjs  package-lock.json  package.json  tsconfig.json  vitest.config.ts
web/app/: globals.css  layout.tsx  page.tsx  upload-workbench.tsx
web/app/__tests__/: contracts.test.ts  page-copy.test.ts
web/app/api/artifacts/[artifactId]/sign/: route.ts
web/app/api/jobs/: route.ts
web/app/api/jobs/[jobId]/: route.ts
web/app/api/uploads/: route.ts
web/lib/: contracts.ts  mock-jobs.ts  supabase-server.ts
web/test/: route-boundary.test.ts
